manifests/infopanel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: infopanel2
  name: infopanel2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infopanel
  strategy: {}
  template:
    metadata:
      labels:
        app: infopanel
    spec:
      containers:
      - image: ghcr.io/openlab-aux/infopanel2:main
        name: infopanel-client
        ports:
        - containerPort: 4321
          name: http
        imagePullPolicy: Always
        resources:
          requests:
            memory: 256M
            cpu: 256m
          limits:
            memory: 512M
            cpu: 512m
