manifests/infopanel/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: infopanel
  name: infopanel
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: infopanel
  type: ClusterIP
