manifests/infopanel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infopanel
  annotations:
    cert-manager.io/cluster-issuer: le-prod
spec:
  ingressClassName: nginx
  rules:
    - host: "infopanel.lab.weltraumpflege.org"
      http:
        paths:
          - path: /
            backend:
              service:
                name: infopanel
                port:
                  name: web
            pathType: Prefix
  
  tls:
    - hosts:
      - "infopanel.lab.weltraumpflege.org"
      secretName: ingress-cert
